Revision history for Perl extension GraphViz2::Marpa.

2.12  2021-04-30T19:45:00
	- Fix bug whereby I had used a variable name $numeric instead of defined($numeric).
		This is triggered when a node attribute has the value 0.
		Reported by Martin Ward.
	- Adopt new repo structure. See
		http://savage.net.au/Ron/html/My.Workflow.for.Building.Distros.html.
	- Add files t/00.versions.*.

2.11  2017-04-17T15:55:00
	- Edit 2 test files to change bail_out() to BAIL_OUT().
	- Wind down pre-req for Test::More to 1.001002.
	- Edit Config pre-req version from under to 0.

2.10  2016-09-28T08:47:00
	- Fix pre-version # of Try::Tiny. It was 1.29 (copied carelessly from Tree::DAG_Node) and
		should be 0.27.  Thanx to Xavier Caron, via github.

2.09  2016-08-14T11:33:00
	- Stop using Test::Stream. Use Test::More shipped in the Test::Simple distro.
	- Update version #s in pre-reqs.

2.08  2016-05-11T10:09:00
	- Update pre-reqs from Test2::Tools::* V 0.000029 to Test2::Bundle::Extended V 0.000030.
	- Remove Test2::Suite from TEST_REQUIRES in Makefile.PL. It's not used explicitly, and this
		change is part of determining why Test2 or my build tools report a version # of
		2.9e-5. Now that Test2 has just been officially released as V 1.302015, this problem
		may have vanished. Errr, no. The patch is to quote the version # in TEST_REQUIRES,
		although 'small' version #s in PREREQ_PM do not have to be quoted. Sigh. See
		https://github.com/Perl-Toolchain-Gang/CPAN-Meta-Requirements/issues/30.

2.07  2016-05-04T08;15:00
	- Correct physical address of Free Software Foundation in LICENSE file. See RT#114149.
		Thanx to Petr Pisar.

2.06  2016-05-03T11:45:00
	- Update last 2 lines of docs from:
			The Artistic License, a copy of which is available at:
			http://www.opensource.org/licenses/index.html
		To
			The Perl License, a copy of which is available at:
			http://dev.perl.org/licenses/
		See RT#114119. With thanx to eagle-eyed Petr Pisar.

2.05  2016-05-01T17:25:00