@@ -11,6 +11,7 @@ This is triggered when a node attribute has the value 0.
 Reported by Martin Ward.
 - Adopt new repo structure. See
 http://savage.net.au/Ron/html/My.Workflow.for.Building.Distros.html.
+- Reformat Makefile.PL.
 - Add files t/00.versions.*.
 EOT
 
