@@ -6,6 +6,7 @@ Revision history for Perl extension GraphViz2::Marpa.
 		Reported by Martin Ward.
 	- Adopt new repo structure. See
 		http://savage.net.au/Ron/html/My.Workflow.for.Building.Distros.html.
+	- Reformat Makefile.PL.
 	- Add files t/00.versions.*.
 
 2.11  2017-04-17T15:55:00
